# c-certifications

./: CMakeLists.txt  Makefile  README.md  builder.Dockerfile
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
include/: lab1-1.h
misc/diagrams/: Compilation.drawio
src/C1/src/: c1-1.c  c1-2.c
tests/unittest/: project.yml
tests/unittest/test/: test_lab1-1.c
